Added Developer system - added DeveloperController - added DeveloperCommandModel - added Developer Index view - added linking button @ Header
The developer system will provide quick access to tweaking functions directly on runtime! (seeding, basic database management...)

+ deleted and gitignored Migrations

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/la-mia-pizzeria/Migrations/PizzeriaContextModelSnapshot.cs
+/la-mia-pizzeria/Migrations/20230511101406_Initial.Designer.cs
+/la-mia-pizzeria/Migrations/20230511101406_Initial.cs
+/la-mia-pizzeria/Migrations/20230510132043_InitialCreate.Designer.cs
+/la-mia-pizzeria/Migrations/20230510132043_InitialCreate.cs
