Refactor @ Pizza System - refactor & rename @ PizzaSeeder (from PizzasSeeder) - refactor fields @ Pizza model - refactor for Database support @ PizzaController - subsequent refactors @ Pizza/* views
+ Shortened description min length to 3 words
+ Added Clear & Seed pizzas DeveperCommands

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 /la-mia-pizzeria/Migrations/20230511101406_Initial.cs
 /la-mia-pizzeria/Migrations/20230510132043_InitialCreate.Designer.cs
 /la-mia-pizzeria/Migrations/20230510132043_InitialCreate.cs
+/la-mia-pizzeria/Migrations
